# Snake_Game_AI

./: .pre-commit-config.yaml  LICENSE  README.md  game.py  pyproject.toml
src/: agent.py  game.py  model.py  plotter.py
