[tool.poetry]
name = "snake-game-ai"
version = "0.1.0"
description = "Simple snake game that will be played by a reinforcement learning agent"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
matplotlib = "^3.8.0"
ipython = "^8.17.2"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
pre-commit = "^3.5.0"
enum34 = "^1.1.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
